<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@drawable/white_10dp_conner">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_222222"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/physical_tran_confir" />

    <RelativeLayout
        android:id="@+id/address_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <View
            android:layout_width="3dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectange_r3_365cfe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/physical_tan_address"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/address_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/physical_address_tips"
        android:textColor="@color/black_50a"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_title_layout" />

    <RelativeLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_conner_shadow_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_desc_tv">

        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/select_address_iv"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:hint="@string/physical_input_address_hint"
            android:textColor="@color/color_222222"
            android:textSize="14sp"
            android:focusable="true"
            android:imeOptions="actionNext" />

        <ImageView
            android:id="@+id/select_address_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="7dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/points_address_icon"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/psw_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_layout">

        <View
            android:layout_width="3dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectange_r3_365cfe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physical_pay_psw"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />

    </RelativeLayout>



    <EditText
        android:id="@+id/psw_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_conner_shadow_bg"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="textPassword"
        android:hint="@string/physical_input_psw_hint"
        android:textColor="@color/color_222222"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/psw_title_layout" />

    <RelativeLayout
        android:id="@+id/gas_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/psw_et">

        <View
            android:layout_width="3dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectange_r3_365cfe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physical_gas_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/gas_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0.008520 ETH"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_10dp_top_conner"
        app:layout_constraintTop_toBottomOf="@id/gas_title_layout">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:textColor="@color/black_60a"
            android:textSize="14sp"
            android:text="@string/cancel"
            android:gravity="center"
            android:background="@drawable/grey25_stroke_white_bg"/>
        <TextView
            android:id="@+id/sure_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/sure"
            android:gravity="center"
            android:background="@drawable/blue25_stroke_bg"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>