<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/physical_curr_address_title"/>

        <LinearLayout
            android:id="@+id/address_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/address_title_tv">

            <TextView
                android:id="@+id/curr_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="middle"
                android:maxEms="10"
                android:text="@string/loading_str"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:src="@mipmap/copy_icon"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/switch_wallet"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="9dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/home_switch_wallet_icon"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_contract_address_Layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/white_5dp_conner">

        <TextView
            android:id="@+id/select_contract_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#999999"
            android:textSize="14sp"
            android:text="@string/physical_all_contract_address"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/select_allow_icon"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/physical_assets_title"/>

</LinearLayout>